--- a/src/includes/maps.pug
+++ b/src/includes/maps.pug
@@ -1,14 +1,12 @@
 -
   var characterInfoFields = {
-    'player-name': 'Player Name',
-    'player-name': 'Player Name',
     'character-name': 'Character Name',
     'class': 'Class',
     'level': 'Level',
     'race': 'Race',
     'background': 'Background',
     'alignment': 'Alignment',
-    'experience-points': 'Experience Points'
+    'experience-points': 'EXP'
   }
 
   var abilityScores = {
@@ -46,4 +44,12 @@
     'armor': 'Armor',
     'weapons': 'Weapons',
     'tools': 'Tools'
+  }
+
+  var currencies = {
+    'copper': 'CP',
+    'silver': 'SP',
+    'electrum': 'EP',
+    'gold': 'GP',
+    'platinum': 'PP'
   }
