--- a/src/style.scss
+++ b/src/style.scss
@@ -1,147 +1,107 @@
 @import "https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap";
 
-* {
-    box-sizing: border-box;
-}
-
 html,
 body {
-    font-family: 'roboto';
-    font-size: 21px;
-    margin: 0;
+  font-family: 'roboto';
+  margin: 0;
+  padding: 0;
+  width: 100vw;
+  max-width: 100vw;
+  max-height: 100vh;
 }
 
-html,
-body,
-.container {
-    max-width: 100vw;
-    max-height: 100vh;
+.page {
+  max-width: 1517px;
+  max-height: 1975px;
 }
 
-.container {
+#root {
+  max-width: 100vw;
+}
+
+.wrapper {
+  margin: .25rem;
+
+  > * {
     padding: .5rem;
+  }
 }
 
-.row {
-    margin-bottom: .5rem;
+table {
+  table-layout: fixed;
+  border-spacing: 0;
+  border-collapse: separate;
+  width: 100%;
 
-    > * {
-        &:last-child {
-            margin-right: 0;
-        }
+  &.auto {
+    table-layout: auto !important;
+
+    td, th {
+      width: auto !important;
+      padding-right: .5rem;
     }
-}
+  }
 
-.column {
-    display: inline-block;
-    vertical-align: top;
-    max-width: min-content;
-
-    > .cell {
-        margin-bottom: .5rem;
-
-        > * {
-            margin-right: 0;
-        }
+  tr {
+    td, th {
+      margin: 0;
+      padding: 0;
+      vertical-align: top;
     }
-}
+  }
 
-.cell {
+  .cell {
     border: solid 1px black;
     border-radius: .5rem;
-    padding: .5rem;
-
-    > .title {
-        display: block;
-        font-weight: bold;
-        text-align: center;
-        margin-top: .5rem;
-    }
+  }
 }
 
-.value-display {
-    display: inline-block;
-    width: max-content;
-
-    .label,
-    .value  {
-        width: 100%;
-        display: block;
-    }
-
-    .label {
-        font-weight: bold;
-    }
-
-    &.inline {
-        width: 100%;
-
-        .label,
-        .value {
-            display: inline-block;
-        }
-
-        .label {
-            width: fit-content;
-        }
-
-        .value {
-            width: min-content;
-            float: right;
-        }
-    }
+ol {
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
-.ability-score {
-    text-align: center;
-
-    > * {
-        width: 100%;
-        display: inline-block;
-    }
+.left {
+  text-align: left;
 }
 
-#column-2 {
-    min-width: 340px;
+.center {
+  text-align: center;
 }
 
-.saving-throw,
-.skill {
-    .proficiency,
-    .expertise {
-        text-align: center;
-        display: inline-block;
-        min-width: 0.5em;
-    }
+.right {
+  text-align: right;
 }
 
-#character-info {
-    > * {
-        margin-right: .75rem;
+#ability-scores {
+  .modifier {
+    font-size: 1.5rem;
+  }
+}
 
-        &:last-child {
-            margin-right: 0;
-        }
-    }
+.stat {
+  .value {
+    font-size: 1.5rem;
+  }
 }
 
 #proficiencies {
+  ol {
+    padding-bottom: .5rem;
+  }
+}
 
-    div {
-        margin-bottom: 1rem;
+#features-traits {
+  .items {
+    th {
+      padding-top: .5rem;
+    }
+  }
+}
 
-        &:last-child {
-            margin-bottom: 0;
-        }
-    }
-    
-
-    span {
-        font-weight: bold;
-    }
-    ol {
-        list-style: none;
-        margin: 0;
-        padding: 0;
-    }
+#armor-class {
+  .name {
+    font-size: .8rem;
+  }
 }
